--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ SpeechRecognition==3.8.1
 pyttsx3==2.90
 PyAudio==0.2.11
 imageai==2.1.5
-tensorflow==1.14.0
 opencv-python==4.3.0.36
+pytesseract==0.3.4
+tensorflow==1.14.0
 Keras==2.2.0
